--- a/index.html
+++ b/index.html
@@ -4,9 +4,27 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Студия</title>
 </head>
 <body>
+    <!-- {Header with navigation and contacts} -->
+    <header>
+        <nav>
+            <a href="">WebStudio</a>
+            <ul>
+                <li><span>Студия</span></li>
+                <li><span>Портфолио</span></li>
+                <li><span>Контакты</span></li>
+            </ul>
+        </nav>    
+
+        <address>
+                <ul>
+                    <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                    <li><a href="tel:+380961111111"></a>+38 096 111 11 11</li>
+                </ul>
+        </address>
+    </header>
     
 </body>
 </html>
