--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,22 +9,87 @@
 <body>
     <!-- {Header with navigation and contacts} -->
     <header>
-        <nav>
-            <a href="">WebStudio</a>
-            <ul>
-                <li><span>Студия</span></li>
-                <li><span>Портфолио</span></li>
-                <li><span>Контакты</span></li>
-            </ul>
-        </nav>    
-
-        <address>
+        <!-- Верхняя линия -->
+        <div>
+             <nav>
+                <a href="">WebStudio</a>
                 <ul>
-                    <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                    <li><a href="tel:+380961111111"></a>+38 096 111 11 11</li>
+                    <li><span>Студия</span></li>
+                    <li><span>Портфолио</span></li>
+                    <li><span>Контакты</span></li>
                 </ul>
-        </address>
+            </nav>   
+            <ul>
+                <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+            </ul>
+        </div>
+        <!-- Шапка -->
+        <section>
+            <h1>Эффективные решения для вашего бизнеса</h1>
+            <button type="button">Заказать услугу</button>
+        </section>
+        
     </header>
+
+    <main>
+        <!-- Особенности -->
+        <section>
+            <h2>Особенности</h2>
+            <ul>
+                <li><h3>Внимание к деталям</h3><p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p> </li>
+                <li><h3>Пунктуальность</h3><p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p> </li>
+                <li><h3>Планирование</h3><p>Равным образом консультация с широким активом в значительной степени обуславливает.</p> </li>
+                <li><h3>Современные технологии</h3><p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p> </li>
+            </ul>
+        </section>
+        <!-- Чем мы занимаемся -->
+        <section>
+            <h2>Чем мы занимаемся</h2>
+            <ul>
+                <li><img src="./img/box1.jpg" alt="программирование" width="370"></li>
+                <li><img src="./img/box2.jpg" alt="веб-дизайн" width="370"></li>
+                <li><img src="./img/box3.jpg" alt="графический дизайн" width="370"></li>
+            </ul>
+        </section>
+        <!-- Наша команда -->
+        <section>
+            <h2>Наша команда</h2>
+            <ul>
+                <li>
+                    <img src="./img/img-demyanenko.jpg" alt="продукт дизайнер Игорь Демьяненко" width="370">
+                    <h3>Игорь Демьяненко</h3>
+                    <span>Product Designer</span>
+                </li>
+                <li>
+                    <img src="./img/img-repina.jpg" alt="Фронтенд разработчик Ольга Репина" width="370">
+                    <h3>Ольга Репина</h3>
+                    <span>Frontend Developer</span>
+                </li>
+                <li>
+                    <img src="./img/img-tarasow.jpg" alt="маркетолог Николай Тарасов" width="370">
+                    <h3>Николай Тарасов</h3>
+                    <span>Marketing</span>
+                </li>
+                <li>
+                    <img src="./img/img-ermakow.jpg" alt="дизайнер интерфейса Михаил Ермаков" width="370">
+                    <h3>Михаил Ермаков</h3>
+                    <span>UI Designer</span>
+                </li>
+            </ul>
+        </section>
+    </main>
+    <!-- Подвал -->
+    <footer>
+        <a href="">WebStudio</a>
+        <address>
+            <ul>
+                <li>г. Киев, пр-т Леси Украинки, 26</li>
+                <li><a href="mailto:info@example.com">info@example.com</a></li>
+                <li><a href="tel:+380991111111">+38 099 111 11 11</a></li>
+            </ul>
+        </address>
+    </footer>
     
 </body>
 </html>
