--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
         <!-- Верхняя линия -->
         <div>
              <nav>
-                <a href="">WebStudio</a>
+                <a href="" id="studio">WebStudio</a>
                 <ul>
-                    <li><span>Студия</span></li>
-                    <li><span>Портфолио</span></li>
-                    <li><span>Контакты</span></li>
+                    <li><a href="#studio">Студия</a></li>
+                    <li><a href="#portfolio">Портфолио</a></li>
+                    <li><a href="#contacts">Контакты</a></li>
                 </ul>
             </nav>   
             <ul>
@@ -81,10 +81,10 @@
     </main>
     <!-- Подвал -->
     <footer>
-        <a href="">WebStudio</a>
+        <a href="" id="contacts">WebStudio</a>
         <address>
             <ul>
-                <li>г. Киев, пр-т Леси Украинки, 26</li>
+                <li><a href="https://www.google.com/maps/place/%D0%B1%D1%83%D0%BB.+%D0%9B%D0%B5%D1%81%D0%B8+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D0%B5%D0%B2,+02000/@50.4265807,30.5361971,17z/data=!3m1!4b1!4m9!1m2!2m1!1z0LvQtdGB0Lgg0YPQutGA0LDQuNC90LrQuCDQutC40LXQsiAyNg!3m5!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858!15sCiXQu9C10YHQuCDRg9C60YDQsNC40L3QutC4INC60LjQtdCyIDI2kgERY29tcG91bmRfYnVpbGRpbmc" target="_blank" rel="noreferrer noopener">г. Киев, пр-т Леси Украинки, 26</a></li>
                 <li><a href="mailto:info@example.com">info@example.com</a></li>
                 <li><a href="tel:+380991111111">+38 099 111 11 11</a></li>
             </ul>
