--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
     <!-- {Header with navigation and contacts} -->
     <header>
         <!-- Верхняя линия -->
-        <div>
-             <nav>
+                     <nav>
                 <a href="" id="studio">WebStudio</a>
                 <ul>
                     <li><a href="#studio">Студия</a></li>
@@ -23,16 +22,15 @@
                 <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
                 <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
             </ul>
-        </div>
-        <!-- Шапка -->
+        </header>
+
+    <main>
+        <!-- Hero -->
         <section>
             <h1>Эффективные решения для вашего бизнеса</h1>
             <button type="button">Заказать услугу</button>
         </section>
         
-    </header>
-
-    <main>
         <!-- Особенности -->
         <section>
             <h2>Особенности</h2>
